[IMP] knowledge: prevent options panel overflow

--- a/addons/knowledge/static/src/scss/knowledge_views.scss
+++ b/addons/knowledge/static/src/scss/knowledge_views.scss
@@ -144,7 +144,7 @@
         width: 200px;
     }
     .dropdown-menu.o_knowledge_more_options_panel {
-        width: 225px;
+        width: 250px;
     }
     .dropdown-menu.o_knowledge_share_panel {
         width: 420px;
